added cmake with eigen

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ lib
 
 basic_lib/cmakeBase/cmake_example/CMakeFiles
 basic_lib/cmakeBase/cmake_gdb_example/CMakeFiles
+basic_lib/eigenML/eigenAPI/CMakeFiles
 *.log
 *.cmake 
 Makefile
